2003-04-08  Yoshinori Sato  <qzb04471@nifty.ne.jp>
2003-04-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/debugging.cdl: Allow CRC to be allocated in ROM as well as RAM.
	* src/generic-stub.c: as above.

2003-04-02  Gary Thomas  <gary@mlbassoc.com>

	* src/generic-stub.c: 
	* include/generic-stub.h: Cleanup when program args are not
	supported (remove some unused static storage).

2003-03-03  Knud Woehler <knud.woehler@microplex.de>

	* src/hal_if.c:
	* include/hal_if.h: Add CYGNUM_CALL_IF_FLASH_FIS_OP. FIS read
	via the virtual vector table.
	
2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/hal.cdl: Fix doc links.

	* doc/hal.sgml: hal-common-current-doc-porting-sgml entity ->
	hal-common-porting-sgml in line with other docs.

2003-02-13  Mark Salter  <msalter@redhat.com>

	* src/gdb-fileio.h (FILEIO_O_BINARY): New flag.
	(FILEIO_O_TEXT): New flag.

2003-01-31  Mark Salter  <msalter@redhat.com>

	* include/hal_if.h: Add CYGNUM_CALL_IF_MONITOR_RETURN.

2002-12-04  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/hal.cdl: RAM applications should not claim (reset) version
	string by default.

2002-12-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/hal_if.c (hal_if_init): 
	* include/hal_if.h: 
	* cdl/hal.cdl: Allow monitor (RedBoot) version string to be exported
	via the virtual vector table.

2002-11-13  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/hal.cdl: Add CDL control over DATA cache startup mode.

2002-09-11  Mark Salter  <msalter@redhat.com>

	* include/hal_if.h: Add __COMMCTL_ENABLE_LINE_FLUSH and
	__COMMCTL_DISABLE_LINE_FLUSH.

2002-08-29  Mark Salter  <msalter@redhat.com>

	* include/generic-stub.h: Add defines for Z packet types.
	* src/bplist-dynamic.c: Add support for deferred hardware breakpoint
	and watchpoint insertion/deletion. This gets around gdb problem where
	gdb tries accessing watched memory before removing watchpoint.
	* src/generic-stub.c (__process_packet): Ditto.
	* include/hal_stub.h: Ditto.
